--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://yuzhian.github.io/hugo-pages'
 languageCode = 'zh-cn'
 title = "yuzhian's blog"
-theme = 'ananke'
+theme = 'black-and-light'
