--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/black-and-light"]
-	path = themes/black-and-light
-	url = https://github.com/davidhampgonsalves/hugo-black-and-light-theme.git
+[submodule "themes/hello-friend"]
+	path = themes/hello-friend
+	url = https://github.com/panr/hugo-theme-hello-friend.git
